dnl Process this file with autoconf to produce a configure script.
AC_INIT(cassowary)

AC_CONFIG_AUX_DIR(.)
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AC_VALIDATE_CACHED_SYSTEM_TUPLE()

LIBCASSOWARY_MAJOR_VERSION=0
LIBCASSOWARY_MINOR_VERSION=60
LIBCASSOWARY_MICRO_VERSION=3

AC_SUBST(LIBCASSOWARY_MAJOR_VERSION)
AC_SUBST(LIBCASSOWARY_MINOR_VERSION)
AC_SUBST(LIBCASSOWARY_MICRO_VERSION)

BETA=

LIBCASSOWARY_VERSION=$LIBCASSOWARY_MAJOR_VERSION.$LIBCASSOWARY_MINOR_VERSION.${LIBCASSOWARY_MICRO_VERSION}${BETA}
LIBCASSOWARY_RELEASE=$LIBCASSOWARY_MAJOR_VERSION-$LIBCASSOWARY_MINOR_VERSION-${LIBCASSOWARY_MICRO_VERSION}${BETA}

AC_SUBST(LIBCASSOWARY_SO_VERSION)
AC_SUBST(LIBCASSOWARY_VERSION)
AC_SUBST(LIBCASSOWARY_RELEASE)

AM_INIT_AUTOMAKE(libcassowary,${LIBCASSOWARY_VERSION})

AM_CONFIG_HEADER(config.h)

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CXX
if test "$ac_cv_prog_cxx" = "no" ; then
   AC_MSG_ERROR([*** libcassowary is C++. You don't appear to have a C++ compiler])
fi

CXXFLAGS="-g -D_REENTRANT"
OPT_CXXFLAGS="-D_REENTRANT -O6 -fomit-frame-pointer -ffast-math -fstrength-reduce -funroll-loops -fmove-all-movables"
if test x"$GXX" = xyes ; then
   CXXFLAGS="$CXXFLAGS -Wall"
fi
if test x"$GXX" = xyes ; then
   OPT_CXXFLAGS="$OPT_CXXFLAGS -Wall"
fi

AC_ARG_ENABLE(optimize,
     [  --enable-optimize       ask the compiler for its best optimizations.],
     [ if test "x$enable_optimize" != "xno" ; then CXXFLAGS="$OPT_CXXFLAGS" ; fi ])

AC_OBJEXT
AC_PROG_RANLIB
AM_PROG_LEX
AC_PROG_YACC

AC_LANG_CPLUSPLUS

CFLAGS="$CFLAGS $GLIB_CFLAGS"
CXXFLAGS="$CXXFLAGS $GLIB_CFLAGS"
LIBS="$LIBS $GLIB_LIBS $POSIX_RTSCHED_LIBS"

AC_OUTPUT([Makefile
           cassowary/Makefile
])
